--- a/frontend/AIENG/android/app/src/main/res/values/strings.xml
+++ b/frontend/AIENG/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">ssafy-ieng</string>
+  <string name="app_name">aieng</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
   <string name="kakao_app_key">b906020e87ccb5be3d46ebe709f4a51a</string>
